me-worldwind: Delay initial updateOverlays